k8s/opensearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
spec:
  selector:
    app: opensearch
  ports:
    - port: 9200
      targetPort: 9200
      name: http
    - port: 9600
      targetPort: 9600
      name: transport
  type: ClusterIP
